// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box renders correctly with backgronudColor prop 1`] = `
<div
  className="box"
/>
`;

exports[`Box renders correctly with border prop 1`] = `
<div
  className="box border"
/>
`;

exports[`Box renders correctly with borderColor prop 1`] = `
<div
  className="box borderColorUiBorderColor"
/>
`;

exports[`Box renders correctly with children 1`] = `
<div
  className="box"
>
  Child
</div>
`;

exports[`Box renders correctly with empty props 1`] = `
<div
  className="box"
/>
`;

exports[`Box renders correctly with margin prop 1`] = `
<div
  className="box mSmall"
/>
`;

exports[`Box renders correctly with marginEnd prop 1`] = `
<div
  className="box meSmall"
/>
`;

exports[`Box renders correctly with marginStart prop 1`] = `
<div
  className="box msSmall"
/>
`;

exports[`Box renders correctly with marginTop prop 1`] = `
<div
  className="box mtSmall"
/>
`;

exports[`Box renders correctly with marginX prop 1`] = `
<div
  className="box mxSmall"
/>
`;

exports[`Box renders correctly with marginY prop 1`] = `
<div
  className="box mySmall"
/>
`;

exports[`Box renders correctly with padding prop 1`] = `
<div
  className="box pSmall"
/>
`;

exports[`Box renders correctly with paddingBottom prop 1`] = `
<div
  className="box pbSmall"
/>
`;

exports[`Box renders correctly with paddingEnd prop 1`] = `
<div
  className="box peSmall"
/>
`;

exports[`Box renders correctly with paddingStart prop 1`] = `
<div
  className="box psSmall"
/>
`;

exports[`Box renders correctly with paddingTop prop 1`] = `
<div
  className="box ptSmall"
/>
`;

exports[`Box renders correctly with paddingX prop 1`] = `
<div
  className="box pxSmall"
/>
`;

exports[`Box renders correctly with paddingY prop 1`] = `
<div
  className="box pySmall"
/>
`;

exports[`Box renders correctly with rounded prop 1`] = `
<div
  className="box roundedSmall"
/>
`;

exports[`Box renders correctly with shadow prop 1`] = `
<div
  className="box shadowSmall"
/>
`;

exports[`Box renders correctly with text prop 1`] = `
<div
  className="box textPrimaryTextColor"
/>
`;
